conf/distro: Create Axxia specific distribution configuration
Create a specific distro starting from the poky one and move all
Axxia specific settings from layer.conf and machine configuration
files in order give the posibility to use meta-axxia with other
layers without bloking each onther.

Update README with this change since the final user need to set
the Axxia distro in local.conf from now.

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/conf/local.conf.sample
+++ b/conf/local.conf.sample
@@ -17,7 +17,7 @@ PARALLEL_MAKE = "-j 12"
 # DL_DIR = "##OEROOT##/../downloads"
 # SSTATE_DIR = "##OEROOT##/../sstate_cache"
 
-DISTRO ?= "poky"
+DISTRO = "axxia"
 PACKAGE_CLASSES ?= "package_rpm"
 EXTRA_IMAGE_FEATURES = "debug-tweaks"
 USER_CLASSES ?= "buildstats image-mklibs image-prelink"
