--- a/conf/machine/axxiaarm64.conf
+++ b/conf/machine/axxiaarm64.conf
@@ -2,16 +2,10 @@
 #@NAME: axxiaarm64
 #@DESCRIPTION: Machine configuration for INTEL Axxia ARM64 systems
 
-PREFERRED_VERSION_linux-yocto ?= "4.1%"
-#PREFERRED_VERSION_u-boot-axxia ?= "2013.01.01%"
-PREFERRED_PROVIDER_virtual/kernel ?= "linux-yocto"
-#PREFERRED_PROVIDER_virtual/bootloader ?= "u-boot-axxia"
-
-#EXTRA_IMAGEDEPENDS = "u-boot-axxia"
+PREFERRED_PROVIDER_virtual/kernel ?= "linux-yocto-rt"
+PREFERRED_VERSION_linux-yocto ?= "4.9%"
 
 MACHINE_FEATURES += "ext3"
-
-MACHINE_EXTRA_RRECOMMENDS += ""
 
 # Default tune will be for X9 board: cortexa57
 CHIPSET ?= "X9"
@@ -19,10 +13,12 @@ TUNE_X9 = "conf/machine/include/tune-cortexa57.inc"
 TUNE_XLF = "conf/machine/include/tune-cortexa53.inc"
 require ${TUNE_${CHIPSET}}
 
-# Armv8a SoCs supports 32-bit and 64-bit states. Set default to 32-bit state for axxiarm machine
+# Armv8a SoCs supports 32-bit and 64-bit states.
+# Set default to 32-bit state for axxiarm machine
 DEFAULTTUNE_X9 = "cortexa57_64-crypto"
 DEFAULTTUNE_XLF = "cortexa53_64-crypto"
-DEFAULTTUNE ?= "${@bb.utils.contains('CHIPSET', 'XLF', '${DEFAULTTUNE_XLF}', '${DEFAULTTUNE_X9}', d)}"
+DEFAULTTUNE ?= "${@bb.utils.contains('CHIPSET', 'XLF', \
+		'${DEFAULTTUNE_XLF}', '${DEFAULTTUNE_X9}', d)}"
 
 KARCH = "arm64"
 KERNEL_IMAGETYPE = "Image"
@@ -33,7 +29,3 @@ IMAGE_FSTYPES += "ext2"
 IMAGE_FSTYPES += "tar.gz"
 
 SERIAL_CONSOLE = "9600 ttyAMA0"
-
-# For axxia kernels skip bbappends from meta-virtualization and meta-intel to skip fragments and layer specific setings for kernel
-BBMASK = "meta-virtualization/recipes-kernel/linux"
-BBMASK .= "|meta-intel/common/recipes-kernel/linux"
