--- a/conf/machine/axxiax86-64.conf
+++ b/conf/machine/axxiax86-64.conf
@@ -2,10 +2,10 @@
 #@NAME: axxiax86-64
 #@DESCRIPTION: Machine configuration for INTEL Axxia x86_64 systems (Intel Core i7 CPU and later) with MMX, SSE, SSE2, SSE3, and SSSE3 instruction set support. Supports a moderately wide range of drivers that should boot and be usable on "typical" hardware.
 
-PREFERRED_VERSION_linux-yocto ?= "4.9%"
-PREFERRED_PROVIDER_virtual/kernel ?= "linux-yocto"
-
 require conf/machine/intel-corei7-64.conf
+
+PREFERRED_PROVIDER_virtual/kernel ?= "linux-yocto"
+PREFERRED_VERSION_linux-yocto ?= "4.9%"
 
 MACHINEOVERRIDES =. "intel-x86-common:"
 
@@ -17,8 +17,8 @@ KEEPUIMAGE = "no"
 
 APPEND = "rootwait console=ttyS5,115200 console=tty0 intel_iommu=on"
 
-MULTILIBS = "multilib:lib32"
 DEFAULTTUNE_virtclass-multilib-lib32 = "corei7-32"
+MULTILIBS = "multilib:lib32"
 
 IMAGE_FSTYPES += "hddimg"
 IMAGE_FSTYPES += "ext2"
@@ -26,9 +26,5 @@ IMAGE_FSTYPES += "tar.gz"
 
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "kernel-module-simicsfs"
 KERNEL_MODULE_AUTOLOAD += " simicsfs"
-IMAGE_INSTALL_append = " simicsfs-mod \
-			 ${@base_conditional('RUNTARGET', 'frio', 'kernel-module-dh-generic', '', d)}"
-
-# For axxia kernels skip bbappends from meta-virtualization and meta-intel to skip fragments and layer specific setings for kernel
-BBMASK = "meta-virtualization/recipes-kernel/linux"
-BBMASK .= "|meta-intel/common/recipes-kernel/linux"
+IMAGE_INSTALL_append = " simicsfs-mod"
+IMAGE_INSTALL_append = " ${@base_conditional('RUNTARGET', 'frio', 'kernel-module-dh-generic', '', d)}"
