--- a/conf/machine/axxiapowerpc.conf
+++ b/conf/machine/axxiapowerpc.conf
@@ -2,13 +2,12 @@
 #@NAME: axxiapowerpc
 #@DESCRIPTION: Machine configuration for the INTEL Axxia PowerPC systems
 
+PREFERRED_PROVIDER_virtual/kernel ?= "linux-yocto"
+PREFERRED_PROVIDER_virtual/bootloader ?= "u-boot-axxia"
 PREFERRED_VERSION_linux-yocto ?= "3.14%"
 PREFERRED_VERSION_u-boot-axxia ?= "2010.03%"
-PREFERRED_PROVIDER_virtual/kernel ?= "linux-yocto"
 
-MACHINE_FEATURES += ""
-
-MACHINE_EXTRA_RRECOMMENDS += ""
+EXTRA_IMAGEDEPENDS = "u-boot-axxia"
 
 require conf/machine/include/tune-ppc476.inc
 
@@ -21,7 +20,3 @@ IMAGE_FSTYPES += "ext2"
 IMAGE_FSTYPES += "tar.gz"
 
 SERIAL_CONSOLE = "115200 ttyS0"
-
-# For axxia kernels skip bbappends from meta-virtualization and meta-intel to skip fragments and layer specific setings for kernel
-BBMASK = "meta-virtualization/recipes-kernel/linux"
-BBMASK .= "|meta-intel/common/recipes-kernel/linux"
