conf: Declare LAYERDEPENDS for axxia layer
Also remove meta-yocto-bsp layer from dependencies.
Add RUNTARGET choice in local.conf.simple.

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -8,3 +8,13 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 BBFILE_COLLECTIONS += "axxia"
 BBFILE_PATTERN_axxia := "^${LAYERDIR}/"
 BBFILE_PRIORITY_axxia = "5"
+
+LAYERDEPENDS_axxia = " \
+	core \
+	yocto \
+	openembedded-layer \
+	networking-layer \
+	meta-python \
+	virtualization-layer \
+	intel \
+"
