--- a/conf/local.conf.sample
+++ b/conf/local.conf.sample
@@ -4,8 +4,11 @@ MACHINE = "axxiaarm64"
 # Chipset required only for arm builds: 5500, X9, XLF
 CHIPSET = "X9"
 
+# System where the image will run, only for x86-64 builds: simics, frio
+RUNTARGET = "simics"
+
 # Kernel providers: linux-yocto, linux-yocto-rt, linux-axxia, linux-axxia-rt
-PREFERRED_PROVIDER_virtual/kernel = "linux-yocto"
+PREFERRED_PROVIDER_virtual/kernel = "linux-yocto-rt"
 
 # Kernel versions: 4.1, 4.8, 4.9
 PREFERRED_VERSION_linux-yocto = "4.9%"
