axxia-distro: Enable virtualization feature
In order to avoid the following WARNING:

WARNING: You have included the meta-virtualization layer, but
'virtualization' has not been enabled in your DISTRO_FEATURES.
Some bbappend files may not take effect. See the meta-virtualization
README for details on enabling virtualization support.

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/conf/distro/axxia.conf
+++ b/conf/distro/axxia.conf
@@ -9,7 +9,7 @@ SDK_VERSION := "1.0"
 
 TARGET_VENDOR = "-axxia"
 
-DISTRO_FEATURES_append = " pam systemd"
+DISTRO_FEATURES_append = " pam systemd virtualization"
 DISTRO_FEATURES_BACKFILL_CONSIDERED += "sysvinit"
 VIRTUAL-RUNTIME_init_manager = "systemd"
 VIRTUAL-RUNTIME_initscripts = "systemd-compat-units"
