axxia-distro: Set PREFERRED_RPROVIDER for iasl-native
In order to avoid the bitbake note:
NOTE: Multiple providers are available for iasl-native
      (iasl-native, acpica-native)

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/conf/distro/axxia.conf
+++ b/conf/distro/axxia.conf
@@ -16,6 +16,7 @@ VIRTUAL-RUNTIME_initscripts = "systemd-compat-units"
 
 PREFERRED_VERSION_lxc ?= "2.0.6"
 PREFERRED_RPROVIDER_iasl ?= "iasl"
+PREFERRED_RPROVIDER_iasl-native ?= "iasl-native"
 
 # Skip bbappends from meta-virtualization and meta-intel
 # to skip fragments and layer specific setings for kernel
