--- a/recipes-kernel/linux/conf/yocto-4.9/axxiaarm/common/common-non-hw.cfg
+++ b/recipes-kernel/linux/conf/yocto-4.9/axxiaarm/common/common-non-hw.cfg
@@ -25,8 +25,10 @@ CONFIG_LOG_BUF_SHIFT=14
 CONFIG_PAGE_COUNTER=y
 CONFIG_CGROUP_HUGETLB=y
 # CONFIG_MEMCG is not set
-# CONFIG_RT_GROUP_SCHED is not set
 # CONFIG_BLK_CGROUP is not set
+# CONFIG_RT_GROUP_SCHED is not set
+# CONFIG_CGROUP_PIDS is not set
+# CONFIG_CGROUP_PERF is not set
 CONFIG_SCHED_AUTOGROUP=y
 # CONFIG_RD_BZIP2 is not set
 # CONFIG_RD_LZMA is not set
@@ -109,6 +111,7 @@ CONFIG_LLC=y
 # CONFIG_IP_NF_MATCH_ECN is not set
 # CONFIG_IP_NF_MATCH_TTL is not set
 # CONFIG_IP_NF_FILTER is not set
+# CONFIG_IP_NF_TARGET_REJECT is not set
 # CONFIG_IP_NF_TARGET_NETMAP is not set
 # CONFIG_IP_NF_TARGET_REDIRECT is not set
 # CONFIG_IP_NF_TARGET_CLUSTERIP is not set
@@ -128,6 +131,8 @@ CONFIG_LLC=y
 # CONFIG_IP6_NF_FILTER is not set
 # CONFIG_IP6_NF_RAW is not set
 # CONFIG_BRIDGE_NF_EBTABLES is not set
+# CONFIG_SOCK_CGROUP_DATA is not set
+# CONFIG_CGROUP_NET_PRIO is not set
 
 #
 # Network testing
@@ -334,6 +339,7 @@ CONFIG_CRYPTO_NULL=y
 #
 # Authenticated Encryption with Associated Data
 #
+# CONFIG_CRYPTO_CCM is not set
 CONFIG_CRYPTO_GCM=y
 CONFIG_CRYPTO_SEQIV=y
 
