--- a/recipes-kernel/linux/conf/yocto-4.9/axxiaarm/preempt-rt/preempt-rt-non-hw.cfg
+++ b/recipes-kernel/linux/conf/yocto-4.9/axxiaarm/preempt-rt/preempt-rt-non-hw.cfg
@@ -20,3 +20,13 @@ CONFIG_RELAY=y
 # Kernel Performance Events And Counters
 #
 CONFIG_KPROBES=y
+
+#
+# Misc devices
+#
+# CONFIG_AXXIA_MDIO is not set
+
+#
+# Boot options
+#
+# CONFIG_KEXEC is not set
