linux-yocto: 4.9: Update axxiaarm64 fragments to match 1.15 tag
Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/recipes-kernel/linux/conf/yocto-4.9/axxiaarm64/common/common-non-hw.cfg
+++ b/recipes-kernel/linux/conf/yocto-4.9/axxiaarm64/common/common-non-hw.cfg
@@ -19,7 +19,10 @@ CONFIG_LOG_BUF_SHIFT=14
 # CONFIG_CGROUP_FREEZER is not set
 CONFIG_CGROUP_HUGETLB=y
 # CONFIG_RT_GROUP_SCHED is not set
+# CONFIG_CGROUP_PIDS is not set
+# CONFIG_CGROUP_PERF is not set
 # CONFIG_BLK_CGROUP is not set
+
 CONFIG_SCHED_AUTOGROUP=y
 # CONFIG_RELAY is not set
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
@@ -122,6 +125,8 @@ CONFIG_BPF_JIT=y
 # CONFIG_IP6_NF_FILTER is not set
 # CONFIG_IP6_NF_RAW is not set
 # CONFIG_BRIDGE_NF_EBTABLES is not set
+# CONFIG_SOCK_CGROUP_DATA is not set
+# CONFIG_CGROUP_NET_PRIO is not set
 
 #
 # Network testing
@@ -313,6 +318,8 @@ CONFIG_CRYPTO_NULL=m
 #
 # Authenticated Encryption with Associated Data
 #
+# CONFIG_CRYPTO_CCM is not set
+# CONFIG_CRYPTO_GCM is not set
 # CONFIG_CRYPTO_SEQIV is not set
 
 #
