--- a/recipes-kernel/linux/conf/yocto-4.9/axxiaarm64/common/xlf-edac.cfg
+++ b/recipes-kernel/linux/conf/yocto-4.9/axxiaarm64/common/xlf-edac.cfg
@@ -11,15 +11,13 @@
 #
 #.........................................................................
 
-# CONFIG_AXXIA_FAULT is not set
-CONFIG_STM=y
-CONFIG_CONFIGFS_FS=y
+CONFIG_EDAC_AXXIA_SYSMEM_6700=y
+CONFIG_EDAC_AXXIA_CMEM_6700=y
+CONFIG_EDAC_AXXIA_L3_6700=y
+CONFIG_EDAC_AXXIA_L2_CPU_6700=y
 
-CONFIG_CORESIGHT=y
-CONFIG_CORESIGHT_LINKS_AND_SINKS=y
-CONFIG_CORESIGHT_LINK_AND_SINK_TMC=y
-CONFIG_CORESIGHT_SINK_TPIU=y
-CONFIG_CORESIGHT_SINK_ETBV10=y
-CONFIG_CORESIGHT_SOURCE_ETM4X=y
-CONFIG_CORESIGHT_QCOM_REPLICATOR=y
-CONFIG_CORESIGHT_STM=y
+# CONFIG_EDAC_AXXIA_SYSMEM_5600 is not set
+# CONFIG_EDAC_AXXIA_CMEM_5600 is not set
+# CONFIG_EDAC_AXXIA_L3_5600 is not set
+# CONFIG_EDAC_AXXIA_L2_CPU_5600 is not set
+
