linux-yocto: 4.9: Update axxiaarm64 fragments to match 1.69 tag
Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/recipes-kernel/linux/conf/yocto-4.1/axxiaarm64/common/dbg-extra-non-hw.cfg
+++ b/recipes-kernel/linux/conf/yocto-4.1/axxiaarm64/common/dbg-extra-non-hw.cfg
@@ -224,6 +224,11 @@ CONFIG_PANIC_ON_OOPS_VALUE=1
 CONFIG_SCHED_DEBUG=y
 
 #
+# RCU Debugging
+#
+CONFIG_BLK_DEV_IO_TRACE=y
+
+#
 # Security options
 #
 CONFIG_KEYS=y
