--- a/recipes-kernel/linux/conf/yocto-4.1/axxiaarm64/common/dbg-non-hw.cfg
+++ b/recipes-kernel/linux/conf/yocto-4.1/axxiaarm64/common/dbg-non-hw.cfg
@@ -12,6 +12,16 @@
 #.........................................................................
 
 #
+# RCU Subsystem 
+#
+# CONFIG_RELAY is not set
+
+#
+# MMC/SD/SDIO Host Controller Drivers
+#
+CONFIG_DEBUG_EDAC_AXXIA_CMEM=y
+
+#
 # Memory Debugging
 #
 CONFIG_DEBUG_PAGEALLOC=y
@@ -65,4 +75,3 @@ CONFIG_PROVE_RCU=y
 CONFIG_SPARSE_RCU_POINTER=y
 CONFIG_RCU_CPU_STALL_INFO=y
 CONFIG_RCU_TRACE=y
-CONFIG_BLK_DEV_IO_TRACE=y
