--- a/recipes-kernel/linux/conf/yocto-4.1/axxiaarm64/common/xlf-edac.cfg
+++ b/recipes-kernel/linux/conf/yocto-4.1/axxiaarm64/common/xlf-edac.cfg
@@ -11,4 +11,13 @@
 #
 #.........................................................................
 
-# CONFIG_AXXIA_FAULT is not set
+CONFIG_EDAC_AXXIA_SYSMEM_6700=y
+CONFIG_EDAC_AXXIA_CMEM_6700=y
+CONFIG_EDAC_AXXIA_L3_6700=y
+CONFIG_EDAC_AXXIA_L2_CPU_6700=y
+
+# CONFIG_EDAC_AXXIA_SYSMEM_5600 is not set
+# CONFIG_EDAC_AXXIA_CMEM_5600 is not set
+# CONFIG_EDAC_AXXIA_L3_5600 is not set
+# CONFIG_EDAC_AXXIA_L2_CPU_5600 is not set
+
