linux-yocto: 4.1: Cleanup fragments to avoid configcheck warnings
Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/recipes-kernel/linux/conf/yocto-4.1/axxiaarm/preempt-rt/dbg-extra-non-hw.cfg
+++ b/recipes-kernel/linux/conf/yocto-4.1/axxiaarm/preempt-rt/dbg-extra-non-hw.cfg
@@ -208,7 +208,7 @@ CONFIG_NET_TEAM_MODE_LOADBALANCE=y
 #
 # Distributed Switch Architecture drivers
 #
-CONFIG_NET_VENDOR_ARC=yFPPS
+CONFIG_NET_VENDOR_ARC=y
 
 #
 # PPS support
