--- a/recipes-kernel/linux/conf/yocto-4.1/axxiaarm64/standard/standard-non-hw.cfg
+++ b/recipes-kernel/linux/conf/yocto-4.1/axxiaarm64/standard/standard-non-hw.cfg
@@ -11,13 +11,6 @@
 #
 #.........................................................................
 
-#
-# Kernel options
-#
-CONFIG_PREEMPT_NONE=y
-CONFIG_HIGHMEM=y
-
-#
-# Kernel Performance Events And Counters
-#
-CONFIG_OPROFILE=y
+CONFIG_TRANSPARENT_HUGEPAGE=y
+CONFIG_TRANSPARENT_HUGEPAGE_ALWAYS=y
+CONFIG_TRANSPARENT_HUGE_PAGECACHE=y
