linux-yocto: 4.9: Cleanup fragments to avoid configcheck warnings
Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/recipes-kernel/linux/conf/yocto-4.9/axxiaarm64/standard/standard-non-hw.cfg
+++ b/recipes-kernel/linux/conf/yocto-4.9/axxiaarm64/standard/standard-non-hw.cfg
@@ -11,26 +11,6 @@
 #
 #.........................................................................
 
-#
-# Support for hot-pluggable CPUs
-#
-CONFIG_HOTPLUG_CPU=y
-CONFIG_CMA=y
-
-#
-# Frame buffer hardware drivers
-#
-CONFIG_FB_ARMCLCD=y
-
-#
-# Console display driver support
-#
-CONFIG_LOGO=y
-# CONFIG_LOGO_LINUX_MONO is not set
-# CONFIG_LOGO_LINUX_VGA16 is not set
-
-#
-# Virtio drivers
-#
-# CONFIG_VIRTIO_PCI is not set
-# CONFIG_VIRTIO_INPUT is not set
+CONFIG_TRANSPARENT_HUGEPAGE=y
+CONFIG_TRANSPARENT_HUGEPAGE_ALWAYS=y
+CONFIG_TRANSPARENT_HUGE_PAGECACHE=y
