Split layer and add meta-intel-snr-bsp sublayer
The purpose is to make easier the usage of meta-intel-axxia
with other layers.

meta-intel-snr-bsp will contain only BSP specific config files.

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/conf/distro/intel-axxia.conf
+++ b/conf/distro/intel-axxia.conf
@@ -18,6 +18,10 @@ PREFERRED_RPROVIDER_iasl ?= "iasl"
 PREFERRED_RPROVIDER_iasl-native ?= "iasl-native"
 PREFERRED_VERSION_rpcbind ?= "0.2.3"
 
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS_axxiax86-64 += "kernel-module-simicsfs"
+KERNEL_MODULE_AUTOLOAD_axxiax86-64 += " simicsfs"
+IMAGE_INSTALL_axxiax86-64 += " simicsfs-mod"
+
 # Skip bbappends from meta-virtualization and meta-intel
 # to skip fragments and layer specific setings for kernel
 BBMASK = "meta-virtualization/recipes-kernel/linux"
