Clean Up following best practices from Yocto Manual
Avoiding "+=" and "=+" and using machine-specific _append and
_prepend operations is recommended as well.

Modify Variables to Support a Different Machine: changes only for
axxiax86-64 machine.

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/conf/distro/intel-axxia.conf
+++ b/conf/distro/intel-axxia.conf
@@ -10,7 +10,7 @@ SDK_VERSION := "1.0"
 TARGET_VENDOR = "-intelaxxia"
 
 DISTRO_FEATURES_append = " pam systemd virtualization"
-DISTRO_FEATURES_BACKFILL_CONSIDERED += "sysvinit"
+DISTRO_FEATURES_BACKFILL_CONSIDERED_append = " sysvinit"
 VIRTUAL-RUNTIME_init_manager = "systemd"
 VIRTUAL-RUNTIME_initscripts = "systemd-compat-units"
 
@@ -18,9 +18,9 @@ PREFERRED_RPROVIDER_iasl ?= "iasl"
 PREFERRED_RPROVIDER_iasl-native ?= "iasl-native"
 PREFERRED_VERSION_rpcbind ?= "0.2.3"
 
-MACHINE_ESSENTIAL_EXTRA_RDEPENDS_axxiax86-64 += "kernel-module-simicsfs"
-KERNEL_MODULE_AUTOLOAD_axxiax86-64 += " simicsfs"
-IMAGE_INSTALL_axxiax86-64 += " simicsfs-mod"
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS_append_axxiax86-64 = " kernel-module-simicsfs"
+KERNEL_MODULE_AUTOLOAD_append_axxiax86-64 = " simicsfs"
+IMAGE_INSTALL_append_axxiax86-64 = " simicsfs-mod"
 
 # Skip bbappends from meta-virtualization and meta-intel
 # to skip fragments and layer specific setings for kernel
