--- a/meta-intel-snr-bsp/conf/machine/axxiax86-64.conf
+++ b/meta-intel-snr-bsp/conf/machine/axxiax86-64.conf
@@ -9,7 +9,7 @@ PREFERRED_VERSION_linux-yocto ?= "4.9%"
 
 MACHINEOVERRIDES =. "intel-x86-common:"
 
-MACHINE_FEATURES += "ext3"
+MACHINE_FEATURES_append = " ext3"
 
 KARCH = "x86_64"
 KERNEL_IMAGETYPE = "bzImage"
@@ -20,6 +20,6 @@ APPEND = "rootwait console=ttyS5,115200 console=tty0 intel_iommu=on"
 DEFAULTTUNE_virtclass-multilib-lib32 = "corei7-32"
 MULTILIBS = "multilib:lib32"
 
-IMAGE_FSTYPES += "hddimg"
-IMAGE_FSTYPES += "ext2"
-IMAGE_FSTYPES += "tar.gz"
+IMAGE_FSTYPES += " hddimg"
+IMAGE_FSTYPES += " ext2"
+IMAGE_FSTYPES += " tar.gz"
