--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -5,9 +5,9 @@ BBPATH .= ":${LAYERDIR}"
 BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 	${LAYERDIR}/recipes-*/*/*.bbappend"
 
-BBFILE_COLLECTIONS += "intel-snr"
-BBFILE_PATTERN_intel-snr := "^${LAYERDIR}/"
-BBFILE_PRIORITY_intel-snr = "5"
+BBFILE_COLLECTIONS += "intel-axxia"
+BBFILE_PATTERN_intel-axxia := "^${LAYERDIR}/"
+BBFILE_PRIORITY_intel-axxia = "5"
 
 LAYERDEPENDS_intel-axxia = " \
 	core \
@@ -16,5 +16,5 @@ LAYERDEPENDS_intel-axxia = " \
 	meta-python \
 	virtualization-layer \
 	intel \
-	snr-bsp \
+	snr \
 "
