--- a/meta-intel-snr/conf/layer.conf
+++ b/meta-intel-snr/conf/layer.conf
@@ -5,8 +5,8 @@ BBPATH .= ":${LAYERDIR}"
 BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 	${LAYERDIR}/recipes-*/*/*.bbappend"
 
-BBFILE_COLLECTIONS += "snr-bsp"
-BBFILE_PATTERN_snr-bsp := "^${LAYERDIR}/"
-BBFILE_PRIORITY_snr-bsp = "5"
+BBFILE_COLLECTIONS += "snr"
+BBFILE_PATTERN_snr := "^${LAYERDIR}/"
+BBFILE_PRIORITY_snr = "5"
 
-LAYERDEPENDS_intel-snr-bsp = "intel"
+LAYERDEPENDS_snr = "intel"
