Add downlaod dir in PREMIRRORS for local source code
intel-microcode fail to fetch because the downlaod link is not
working in more restrictive networks. Add a copy of the archive
locally and prepend PREMIRRORS variable to search local first.

It can be done the same for other packages the same situation.

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -18,3 +18,13 @@ LAYERDEPENDS_intel-axxia = " \
 	intel \
 	snr \
 "
+
+# We have a pre-populated downloads directory, add to PREMIRRORS
+PREMIRRORS_prepend := "\
+     file://.*/.* file://${LAYERDIR}/downloads/ \n \
+     git://.*/.* git:///${LAYERDIR}/downloads/MIRRORNAME;protocol=file \n \
+     git://.*/.* file://${LAYERDIR}/downloads/ \n \
+     svn://.*/.* file://${LAYERDIR}/downloads/ \n \
+     ftp://.*/.* file://${LAYERDIR}/downloads/ \n \
+     http://.*/.* file://${LAYERDIR}/downloads/ \n \
+     https://.*/.* file://${LAYERDIR}/downloads/ \n"
