Add initial simicsfs-client recipe, version 5.0.130
SimicsFS client gives you access to the file system of your real
computer inside the simulated machine. This greatly simplifies the
process of importing files into the simulated machine.

The package depends on fuse and libmagicpipe.

meta-openembedded/meta-filesystems layer should be added in bblayers
to have fuse recipe.

Source archive simics-5.0.130-src.tgz should be in cipied in
meta-intel-axxia/download and it should be enabled from local.conf:

   SIMICSFS = "yes"

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -13,6 +13,7 @@ LAYERDEPENDS_intel-axxia = " \
 	core \
 	openembedded-layer \
 	networking-layer \
+	filesystems-layer \
 	meta-python \
 	virtualization-layer \
 	intel \
