--- a/conf/bblayers.conf.sample
+++ b/conf/bblayers.conf.sample
@@ -10,6 +10,7 @@ BBLAYERS ?= " \
   ##OEROOT##/meta-poky \
   ##OEROOT##/meta-openembedded/meta-oe \
   ##OEROOT##/meta-openembedded/meta-networking \
+  ##OEROOT##/meta-openembedded/meta-filesystems \
   ##OEROOT##/meta-openembedded/meta-python \
   ##OEROOT##/meta-virtualization \
   ##OEROOT##/meta-intel \
