Change 'snr' to 'intel-snr' to Match The Layer
As the layer is named meta-intel-snr, use intel-snr
as the collection name.

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -17,7 +17,7 @@ LAYERDEPENDS_intel-axxia = " \
 	meta-python \
 	virtualization-layer \
 	intel \
-	snr \
+	intel-snr \
 "
 
 # We have a pre-populated downloads directory, add to PREMIRRORS
