--- a/meta-intel-snr/conf/layer.conf
+++ b/meta-intel-snr/conf/layer.conf
@@ -5,8 +5,8 @@ BBPATH .= ":${LAYERDIR}"
 BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 	${LAYERDIR}/recipes-*/*/*.bbappend"
 
-BBFILE_COLLECTIONS += "snr"
-BBFILE_PATTERN_snr := "^${LAYERDIR}/"
-BBFILE_PRIORITY_snr = "5"
+BBFILE_COLLECTIONS += "intel-snr"
+BBFILE_PATTERN_intel-snr := "^${LAYERDIR}/"
+BBFILE_PRIORITY_intel-snr = "5"
 
-LAYERDEPENDS_snr = "intel"
+LAYERDEPENDS_intel-snr = "intel"
