simics-client: Skip parsing recipe if SIMICSFS is not used
Add simics-client recipe in BBMASK if SIMICSFS variable is set
to no. Otherwise the recipe will be parsed and because the source
archive will not be in download directory, a warning will appear:

WARNING: ../simicsfs-client_5.0.130.bb: Unable to get checksum for
simicsfs-client SRC_URI entry simics-5.0.130.tgz: file could not be found

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/conf/distro/intel-axxia.conf
+++ b/conf/distro/intel-axxia.conf
@@ -17,3 +17,6 @@ VIRTUAL-RUNTIME_initscripts = "systemd-compat-units"
 PREFERRED_RPROVIDER_iasl ?= "iasl"
 PREFERRED_RPROVIDER_iasl-native ?= "iasl-native"
 PREFERRED_VERSION_rpcbind ?= "0.2.3"
+
+BBMASK_append = " ${@base_conditional('SIMICSFS', 'no', \
+	  'meta-intel-axxia/recipes-support/simics-client', '', d)}"
