--- a/meta-intel-snr/recipes-kernel/linux/frags/4.9/frio-runtarget.cfg
+++ b/meta-intel-snr/recipes-kernel/linux/frags/4.9/frio-runtarget.cfg
@@ -13,9 +13,16 @@
 
 CONFIG_LOG_BUF_SHIFT=20
 
+# CONFIG_MEMCG is not set
+# CONFIG_USER_NS is not set
+
 CONFIG_KALLSYMS_ALL=y
 
+# CONFIG_X86_INTEL_LPSS is not set
+
 CONFIG_PROCESSOR_SELECT=y
+
+# CONFIG_MTRR_SANITIZER is not set
 
 CONFIG_NODES_SHIFT=2
 
@@ -35,6 +42,7 @@ CONFIG_ACPI_PROCFS_POWER=y
 CONFIG_ACPI_EC_DEBUGFS=m
 CONFIG_ACPI_PROCESSOR_AGGREGATOR=m
 CONFIG_ACPI_NUMA=y
+# CONFIG_ACPI_PCI_SLOT is not set
 CONFIG_ACPI_SBS=m
 CONFIG_ACPI_HED=y
 CONFIG_ACPI_CUSTOM_METHOD=m
@@ -45,12 +53,88 @@ CONFIG_ACPI_APEI_PCIEAER=y
 CONFIG_ACPI_APEI_EINJ=m
 CONFIG_ACPI_APEI_ERST_DEBUG=m
 
+# CONFIG_CPU_FREQ_STAT is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
+CONFIG_CPU_FREQ_GOV_POWERSAVE=m
+CONFIG_CPU_FREQ_GOV_USERSPACE=m
+CONFIG_CPU_FREQ_GOV_ONDEMAND=m
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=m
+
+CONFIG_X86_PCC_CPUFREQ=m
+CONFIG_X86_ACPI_CPUFREQ=m
+
 CONFIG_PCI_REALLOC_ENABLE_AUTO=y
 CONFIG_PCI_STUB=m
 
 CONFIG_SATA_AHCI=y
 CONFIG_SATA_AHCI_PLATFORM=y
 CONFIG_ATA_PIIX=y
+
+# CONFIG_PATA_SCH is not set
+CONFIG_ATA_GENERIC=m
+CONFIG_MD_RAID456=y
+
+# CONFIG_DM_THIN_PROVISIONING is not set
+
+# CONFIG_VETH is not set
+
+CONFIG_MDIO=y
+
+# CONFIG_PCNET32 is not set
+# CONFIG_ATL2 is not set
+# CONFIG_ATL1 is not set
+# CONFIG_ATL1E is not set
+# CONFIG_ATL1C is not set
+# CONFIG_ALX is not set
+# CONFIG_TIGON3 is not set
+# CONFIG_BNX2X is not set
+# CONFIG_BNXT is not set
+
+CONFIG_IGB=y
+CONFIG_IGBVF=m
+CONFIG_IXGB=y
+CONFIG_IXGBE=y
+# CONFIG_I40E is not set
+# CONFIG_I40EVF is not set
+
+# CONFIG_8139CP is not set
+# CONFIG_8139TOO is not set
+# CONFIG_R8169 is not set
+
+# CONFIG_MDIO_DEVICE is not set
+# CONFIG_PHYLIB is not set
+
+CONFIG_USB_NET_DRIVERS=y
+# CONFIG_USB_KAWETH is not set
+# CONFIG_USB_PEGASUS is not set
+# CONFIG_USB_RTL8150 is not set
+# CONFIG_USB_RTL8152 is not set
+# CONFIG_USB_USBNET is not set
+# CONFIG_ATH5K_PCI is not set
+# CONFIG_USB_OHCI_HCD is not set
+# CONFIG_USB_ACM is not set
+# CONFIG_USB_WDM is not set
+# CONFIG_USB_DWC3 is not set
+# CONFIG_USB_DWC2 is not set
+# CONFIG_USB_PHY is not set
+# CONFIG_NOP_USB_XCEIV is not set
+# CONFIG_USB_GADGET is not set
+
+CONFIG_HOSTAP=y
+CONFIG_HOSTAP_FIRMWARE=y
+CONFIG_HOSTAP_FIRMWARE_NVRAM=y
+# CONFIG_HOSTAP_PLX is not set
+# CONFIG_HOSTAP_PCI is not set
+
+# CONFIG_ISDN is not set
+
+CONFIG_INPUT_MOUSEDEV_PSAUX=y
+CONFIG_INPUT_EVDEV=m
+# CONFIG_INPUT_TABLET is not set
+# CONFIG_INPUT_TOUCHSCREEN is not set
+CONFIG_INPUT_PCSPKR=y
+CONFIG_INPUT_ATLAS_BTNS=y
 
 CONFIG_LEGACY_PTYS=y
 CONFIG_LEGACY_PTY_COUNT=256
@@ -60,13 +144,98 @@ CONFIG_SERIAL_8250_RUNTIME_UARTS=4
 # CONFIG_SERIAL_8250_EXTENDED is not set
 # CONFIG_SERIAL_8250_DW is not set
 
-CONFIG_SENSORS_ACPI_POWER=m
+CONFIG_HW_RANDOM=m
+CONFIG_HW_RANDOM_INTEL=m
+CONFIG_HW_RANDOM_AMD=m
+CONFIG_HW_RANDOM_VIA=m
+CONFIG_NVRAM=m
 
-CONFIG_INTEL_IPS=y
+CONFIG_I2C_CHARDEV=m
+# CONFIG_I2C_MUX is not set
+# CONFIG_I2C_ISMT is not set
+# CONFIG_I2C_DESIGNWARE_PLATFORM is not set
+# CONFIG_I2C_DESIGNWARE_PCI is not set
+
+# CONFIG_SPI is not set
+
+# CONFIG_PPS_CLIENT_GPIO is not set
+
+# CONFIG_GPIOLIB is not set
+
+CONFIG_HWMON=m
+
+# CONFIG_SENSORS_I5500 is not set
+CONFIG_SENSORS_ACPI_POWER=m
+# CONFIG_INTEL_POWERCLAMP is not set
+# CONFIG_INTEL_SOC_DTS_THERMAL is not set
+# CONFIG_INT340X_THERMAL is not set
+
+CONFIG_ITCO_WDT=m
+
+# CONFIG_BCMA is not set
+
+# CONFIG_MFD_CORE is not set
+
+# CONFIG_LPC_ICH is not set
+
+# CONFIG_MFD_INTEL_LPSS_ACPI is not set
+# CONFIG_MFD_INTEL_LPSS_PCI is not set
+# CONFIG_MFD_WL1273_CORE is not set
+# CONFIG_MEDIA_SUPPORT is not set
+# CONFIG_AGP_INTEL is not set
+
+CONFIG_DRM_I915=y
+# CONFIG_DRM_I915_ALPHA_SUPPORT is not set
+
+# CONFIG_DRM_CIRRUS_QEMU is not set
+
+CONFIG_FB_TILEBLITTING=y
+CONFIG_FB_MATROX=m
+# CONFIG_FB_MATROX_MILLENIUM is not set
+# CONFIG_FB_MATROX_MYSTIQUE is not set
+CONFIG_FB_MATROX_G=y
+# CONFIG_FB_MATROX_I2C is not set
+
+CONFIG_RTC_INTF_DEV_UIE_EMUL=y
+
+# CONFIG_INTEL_IDMA64 is not set
+# CONFIG_INTEL_IOATDMA is not set
+# CONFIG_DW_DMAC is not set
+# CONFIG_DW_DMAC_PCI is not set
+
+CONFIG_UIO=m
+
+# CONFIG_VIRTIO_PCI is not set
+# CONFIG_VIRTIO_MMIO is not set
+
+# CONFIG_STAGING is not set
+
+CONFIG_INTEL_IPS=m
+# CONFIG_INTEL_PMC_IPC is not set
+
+# CONFIG_IIO is not set
+# CONFIG_PWM is not set
+# CONFIG_POWERCAP is not set
+# CONFIG_DEV_DAX is not set
+# CONFIG_NVMEM is not set
+
+CONFIG_DMI_SYSFS=m
+
+# CONFIG_BTRFS_FS is not set
+# CONFIG_OVERLAY_FS is not set
+
+CONFIG_PROC_VMCORE=y
+# CONFIG_TMPFS_POSIX_ACL is not set
+# CONFIG_TMPFS_XATTR is not set
+CONFIG_MINIX_FS=m
+
+# CONFIG_NFSD is not set
 
 CONFIG_SCHED_INFO=y
 CONFIG_SCHEDSTATS=y
 
+CONFIG_SECURITY_NETWORK=y
+# CONFIG_SECURITY_NETWORK_XFRM is not set
 CONFIG_ASYNC_CORE=y
 CONFIG_ASYNC_MEMCPY=y
 CONFIG_ASYNC_XOR=y
