--- a/meta-intel-snr/recipes-kernel/linux/frags/4.14/common-non-hw.cfg
+++ b/meta-intel-snr/recipes-kernel/linux/frags/4.14/common-non-hw.cfg
@@ -15,9 +15,22 @@ CONFIG_EXPERT=y
 
 CONFIG_ASN1=y
 
-CONFIG_DEVKMEM=y
+# CONFIG_CGROUP_PERF is not set
+# CONFIG_CGROUP_PIDS is not set
+# CONFIG_CHECKPOINT_RESTORE is not set
+# CONFIG_RANDOMIZE_BASE is not set
+# CONFIG_MACVLAN is not set
+# CONFIG_TYPHOON is not set
+# CONFIG_DL2K is not set
+# CONFIG_JME is not set
+# CONFIG_SKGE is not set
+# CONFIG_SKY2 is not set
+# CONFIG_FS_ENCRYPTION is not set
+# CONFIG_PROC_CHILDREN is not set
+# CONFIG_OPTIMIZE_INLINING is not set
+# CONFIG_ENCRYPTED_KEYS is not set
 
-CONFIG_NFSD=y
+CONFIG_DEVKMEM=y
 
 CONFIG_DEBUG_RODATA_TEST=y
 CONFIG_SCHED_DEBUG=y
