--- a/meta-intel-snr/recipes-kernel/linux/frags/4.9/frio-runtarget.cfg
+++ b/meta-intel-snr/recipes-kernel/linux/frags/4.9/frio-runtarget.cfg
@@ -241,3 +241,28 @@ CONFIG_ASYNC_MEMCPY=y
 CONFIG_ASYNC_XOR=y
 CONFIG_ASYNC_PQ=y
 CONFIG_ASYNC_RAID6_RECOV=y
+
+CONFIG_USER_RETURN_NOTIFIER=y
+CONFIG_PREEMPT_NOTIFIERS=y
+
+CONFIG_VFIO_NOIOMMU=y
+CONFIG_INTEL_IOMMU_DEFAULT_ON=y
+
+CONFIG_IRQ_BYPASS_MANAGER=m
+CONFIG_IRQ_REMAP=y
+CONFIG_DMAR_TABLE=y
+
+CONFIG_HAVE_KVM_IRQCHIP=y
+CONFIG_HAVE_KVM_IRQFD=y
+CONFIG_HAVE_KVM_IRQ_ROUTING=y
+CONFIG_HAVE_KVM_EVENTFD=y
+CONFIG_KVM_MMIO=y
+CONFIG_KVM_ASYNC_PF=y
+CONFIG_HAVE_KVM_MSI=y
+CONFIG_HAVE_KVM_CPU_RELAX_INTERCEPT=y
+CONFIG_KVM_VFIO=y
+CONFIG_KVM_GENERIC_DIRTYLOG_READ_PROTECT=y
+CONFIG_KVM_COMPAT=y
+CONFIG_HAVE_KVM_IRQ_BYPASS=y
+CONFIG_KVM=m
+CONFIG_KVM_INTEL=m
