linux: frio: Enable CRC8 to avoid SDW driver compile error
| ERROR: "crc8_populate_msb" [drivers/sdw/sdw_bus.ko] undefined!
| ERROR: "crc8" [drivers/sdw/sdw_bus.ko] undefined!

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/meta-intel-snr/recipes-kernel/linux/frags/4.12/frio-runtarget.cfg
+++ b/meta-intel-snr/recipes-kernel/linux/frags/4.12/frio-runtarget.cfg
@@ -330,7 +330,7 @@ CONFIG_CRYPTO_AES_X86_64=m
 CONFIG_CRYPTO_ARC4=y
 
 CONFIG_LIBCRC32C=y
-# CONFIG_CRC8 is not set
+CONFIG_CRC8=y
 
 CONFIG_USER_RETURN_NOTIFIER=y
 CONFIG_PREEMPT_NOTIFIERS=y
