--- a/conf/local.conf.sample
+++ b/conf/local.conf.sample
@@ -1,8 +1,5 @@
 # Machines: axxiaarm, axxiaarm64, axxiax86-64
-MACHINE = "axxiaarm64"
-
-# Chipset required only for arm builds: 5500, X9, XLF
-CHIPSET = "X9"
+MACHINE = "axxiax86-64"
 
 # System where the image will run, only for x86-64 builds: simics, frio
 RUNTARGET = "simics"
