--- a/conf/distro/axxia.conf
+++ b/conf/distro/axxia.conf
@@ -2,10 +2,10 @@ require conf/distro/poky.conf
 
 DISTRO = "axxia"
 DISTRO_NAME = "Axxia (Intel Axxia Distro)"
-DISTRO_VERSION = "1.0"
+DISTRO_VERSION = "snr_delivery11_linux4_9"
 DISTRO_CODENAME = "axxia"
 SDK_VENDOR = "-axxiasdk"
-SDK_VERSION := "1.0"
+SDK_VERSION := "snr_delivery11_linux4_9"
 
 TARGET_VENDOR = "-axxia"
 
