Change Version to "snr_delivery12_linux4_9.rc1"
Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/conf/distro/axxia.conf
+++ b/conf/distro/axxia.conf
@@ -2,10 +2,10 @@ require conf/distro/poky.conf
 
 DISTRO = "axxia"
 DISTRO_NAME = "Axxia (Intel Axxia Distro)"
-DISTRO_VERSION = "unknown"
+DISTRO_VERSION = "snr_delivery12_linux4_9.rc1"
 DISTRO_CODENAME = "axxia"
 SDK_VENDOR = "-axxiasdk"
-SDK_VERSION := "unknown"
+SDK_VERSION := "snr_delivery12_linux4_9.rc1"
 
 TARGET_VENDOR = "-axxia"
 
