--- a/meta-intel-snr/recipes-kernel/linux/frags/4.14/common-non-hw.cfg
+++ b/meta-intel-snr/recipes-kernel/linux/frags/4.14/common-non-hw.cfg
@@ -15,6 +15,8 @@ CONFIG_EXPERT=y
 
 CONFIG_ASN1=y
 
+# CONFIG_IWLWIFI is not set
+
 # CONFIG_CGROUP_PERF is not set
 # CONFIG_CGROUP_PIDS is not set
 # CONFIG_CHECKPOINT_RESTORE is not set
