--- a/conf/local.conf.sample
+++ b/conf/local.conf.sample
@@ -13,6 +13,9 @@ PREFERRED_VERSION_linux-yocto = "4.12%"
 # Add simicsfs-client support (sources should be in meta-intel-axxia/download)
 SIMICSFS = "no"
 
+# Release version should be the tag for meta-intel-axxia from release note (README).
+# RELEASE_VERSION = "" 
+
 BB_NUMBER_THREADS = "12"
 PARALLEL_MAKE = "-j 12"
 
