Add Config Options for Emulation (Linux 4.12)
Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-snr/recipes-kernel/linux/frags/4.12/common-non-hw.cfg
+++ b/meta-intel-snr/recipes-kernel/linux/frags/4.12/common-non-hw.cfg
@@ -11,12 +11,7 @@
 #
 #.........................................................................
 
-CONFIG_EXPERT=y
-
-CONFIG_ASN1=y
-
 # CONFIG_IWLWIFI is not set
-
 # CONFIG_CGROUP_PERF is not set
 # CONFIG_CGROUP_PIDS is not set
 # CONFIG_CHECKPOINT_RESTORE is not set
@@ -32,8 +27,12 @@ CONFIG_ASN1=y
 # CONFIG_OPTIMIZE_INLINING is not set
 # CONFIG_ENCRYPTED_KEYS is not set
 
+CONFIG_EXPERT=y
+CONFIG_ASN1=y
 CONFIG_DEVKMEM=y
-
 CONFIG_DEBUG_RODATA_TEST=y
 CONFIG_SCHED_DEBUG=y
-
+CONFIG_CRYPTO_AUTHENC=y
+CONFIG_CRYPTO_DH=y
+CONFIG_CRYPTO_RSA=y
+CONFIG_UIO=y
