conf/distro: Set default value for SIMICSFS variable
Also, add libmagicpipe package on BBMASK if simicsfs-client is
not compiled.

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/conf/distro/intel-axxia.conf
+++ b/conf/distro/intel-axxia.conf
@@ -18,5 +18,7 @@ PREFERRED_RPROVIDER_iasl ?= "iasl"
 PREFERRED_RPROVIDER_iasl-native ?= "iasl-native"
 PREFERRED_VERSION_rpcbind ?= "0.2.3"
 
+SIMICSFS ?= "no"
 BBMASK_append = " ${@base_conditional('SIMICSFS', 'no', \
-	  'meta-intel-axxia/recipes-support/simics-client', '', d)}"
+	  'meta-intel-axxia/recipes-support/simics-client \
+	   meta-intel-axxia/recipes-support/libmagicpipe', '', d)}"
