--- a/conf/distro/intel-axxia.conf
+++ b/conf/distro/intel-axxia.conf
@@ -2,10 +2,10 @@ require conf/distro/poky.conf
 
 DISTRO = "intel-axxia"
 DISTRO_NAME = "Intel Axxia Distro"
-DISTRO_VERSION = "snr_delivery12_linux4_12.rc3"
+DISTRO_VERSION = "snr_delivery12_linux4_12"
 DISTRO_CODENAME = "intel-axxia"
 SDK_VENDOR = "-intelaxxiasdk"
-SDK_VERSION := "snr_delivery12_linux4_12.rc3"
+SDK_VERSION := "snr_delivery12_linux4_12"
 
 TARGET_VENDOR = "-intelaxxia"
 
