conf/distro: Set distro and sdk version in local.conf
Add new variable RELEASE_VERSION to set DISTRO_VERSION and
SDK_VERSION versions from local.conf at build time instead of
having it hard-coded in distro.conf.

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>
Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/conf/distro/intel-axxia.conf
+++ b/conf/distro/intel-axxia.conf
@@ -2,10 +2,10 @@ require conf/distro/poky.conf
 
 DISTRO = "intel-axxia"
 DISTRO_NAME = "Intel Axxia Distro"
-DISTRO_VERSION = "snr_delivery12_linux4_12"
+DISTRO_VERSION = "${RELEASE_VERSION}"
 DISTRO_CODENAME = "intel-axxia"
 SDK_VENDOR = "-intelaxxiasdk"
-SDK_VERSION := "snr_delivery12_linux4_12"
+SDK_VERSION := "${RELEASE_VERSION}"
 
 TARGET_VENDOR = "-intelaxxia"
 
