axxia-distro: Back to sysvinit as default init manager
A0221 - meta-*-axxia: back to sysvinit instead systemd

This patch can be reverted to use systemd instead sysvinit.

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/conf/distro/intel-axxia.conf
+++ b/conf/distro/intel-axxia.conf
@@ -10,10 +10,7 @@ SDK_VERSION := "${RELEASE_VERSION}"
 TARGET_VENDOR = "-intelaxxia"
 RELEASE_VERSION ?= "snr_deliveryXX_linuxX_XX"
 
-DISTRO_FEATURES_append = " pam systemd virtualization"
-DISTRO_FEATURES_BACKFILL_CONSIDERED_append = " sysvinit"
-VIRTUAL-RUNTIME_init_manager = "systemd"
-VIRTUAL-RUNTIME_initscripts = "systemd-compat-units"
+DISTRO_FEATURES_append = " pam virtualization"
 
 PREFERRED_RPROVIDER_iasl ?= "iasl"
 PREFERRED_RPROVIDER_iasl-native ?= "iasl-native"
