axxia-distro: Set a default DISTRO_VERSION
Otherwhise, when DISTRO_VERSION is empty, some strange errors
will occurs. Such this one in base_files:

| base-files/3.0.14-r89/temp/run.do_install.29530: Syntax error:
	Unterminated quoted string

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/conf/distro/intel-axxia.conf
+++ b/conf/distro/intel-axxia.conf
@@ -8,6 +8,7 @@ SDK_VENDOR = "-intelaxxiasdk"
 SDK_VERSION := "${RELEASE_VERSION}"
 
 TARGET_VENDOR = "-intelaxxia"
+RELEASE_VERSION ?= "snr_deliveryXX_linuxX_XX"
 
 DISTRO_FEATURES_append = " pam systemd virtualization"
 DISTRO_FEATURES_BACKFILL_CONSIDERED_append = " sysvinit"
