Add Support for 9P Filesystems in Qemu
Configure Linux to Support 9P Filesystems and
enable virtfs support in qemu.

Signed-off-by: John Jacques <john.jacques@intel.com>
Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/meta-intel-snr/recipes-kernel/linux/frags/4.12/common-non-hw.cfg
+++ b/meta-intel-snr/recipes-kernel/linux/frags/4.12/common-non-hw.cfg
@@ -37,3 +37,8 @@ CONFIG_DEVKMEM=y
 CONFIG_DEBUG_RODATA_TEST=y
 CONFIG_SCHED_DEBUG=y
 
+CONFIG_NET_9P=y
+CONFIG_NET_9P_VIRTIO=y
+CONFIG_NET_9P_DEBUG=y
+CONFIG_9P_FS=y
+CONFIG_9P_FS_POSIX_ACL=y
