axxia-distro: Add virtualization metadata to BBMASK
Skip bbappends from meta-virtualization to skip fragments and
layer specific setings for linux-yocto kernel.

Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/conf/distro/intel-axxia.conf
+++ b/conf/distro/intel-axxia.conf
@@ -19,4 +19,5 @@ PREFERRED_VERSION_rpcbind ?= "0.2.3"
 SIMICSFS ?= "no"
 BBMASK_append = " ${@base_conditional('SIMICSFS', 'no', \
 	  'meta-intel-axxia/recipes-support/simics-client \
-	   meta-intel-axxia/recipes-support/libmagicpipe', '', d)}"
+	   meta-intel-axxia/recipes-support/libmagicpipe', '', d)} \
+	   meta-virtualization/recipes-kernel/linux"
