Add the UIO PCI Generic Module
Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/meta-intel-snr/recipes-kernel/linux/frags/4.12/frio-runtarget.cfg
+++ b/meta-intel-snr/recipes-kernel/linux/frags/4.12/frio-runtarget.cfg
@@ -272,6 +272,7 @@ CONFIG_RTC_INTF_DEV_UIE_EMUL=y
 # CONFIG_DW_DMAC_PCI is not set
 
 CONFIG_UIO=m
+CONFIG_UIO_PCI_GENERIC=m
 
 # CONFIG_VIRTIO_PCI is not set
 # CONFIG_VIRTIO_MMIO is not set
