--- a/conf/distro/intel-axxia.conf
+++ b/conf/distro/intel-axxia.conf
@@ -19,8 +19,9 @@ PREFERRED_RPROVIDER_iasl ?= "iasl"
 PREFERRED_RPROVIDER_iasl-native ?= "iasl-native"
 PREFERRED_VERSION_rpcbind ?= "0.2.3"
 
-SIMICSFS ?= "no"
-BBMASK_append = " ${@base_conditional('SIMICSFS', 'no', \
-	  'meta-intel-axxia/recipes-support/simics-client \
-	   meta-intel-axxia/recipes-support/libmagicpipe', '', d)} \
-	   meta-virtualization/recipes-kernel/linux"
+# Enable SIMICSFS client support
+#DISTRO_FEATURES_append = " simicsfs"
+
+BBMASK_append = " meta-virtualization/recipes-kernel/linux \
+		  ${@bb.utils.contains('DISTRO_FEATURES', 'simicsfs', '', \
+			               'simics-client* libmagicpipe*', d)}"
