--- a/conf/local.conf.sample
+++ b/conf/local.conf.sample
@@ -11,7 +11,7 @@ PREFERRED_PROVIDER_virtual/kernel = "linux-yocto"
 PREFERRED_VERSION_linux-yocto = "4.12%"
 
 # Add simicsfs-client support (sources should be in meta-intel-axxia/download)
-SIMICSFS = "no"
+DISTRO_FEATURES_append = " simicsfs"
 
 # Release version should be the tag for meta-intel-axxia from release note (README).
 # RELEASE_VERSION = "" 
