axxiax86-64: Include .iso file system type
Signed-off-by: Daniel Dragomir <daniel.dragomir@windriver.com>

--- a/meta-intel-snr/conf/machine/axxiax86-64.conf
+++ b/meta-intel-snr/conf/machine/axxiax86-64.conf
@@ -23,3 +23,5 @@ MULTILIBS = "multilib:lib32"
 IMAGE_FSTYPES += " hddimg"
 IMAGE_FSTYPES += " ext2"
 IMAGE_FSTYPES += " tar.gz"
+IMAGE_FSTYPES += " iso"
+NOISO = "0"
